# rcore_step_by_step

./: .gitignore  1. Make A Freestanding Rust Binary.md  2. Make A Minimal Rust Kernel.md  Makefile  README.md  SUMMARY.md  lfy.md  reference.md  rust-toolchain
bbl/: config.h.in
os/: Cargo.toml  Makefile  riscv32-os.json
os/crate/buddy-allocator/: Cargo.toml  README.md
os/crate/buddy-allocator/src/: lib.rs
os/crate/riscv/: Cargo.toml  build.rs
os/crate/riscv/src/: addr.rs  lib.rs
os/crate/riscv/src/paging/: frame_alloc.rs  mod.rs  page_table.rs  recursive.rs
os/crate/riscv/src/register/: mstatus.rs  satp.rs  scause.rs  sstatus.rs
os/src/: clock.rs  consts.rs  context.rs  init.rs  interrupt.rs  io.rs  lang_items.rs  lib.rs  main.rs  sbi.rs
os/src/boot/: entry.asm  linker.ld
os/src/memory/: mod.rs
os/src/memory/frame_allocator/: mod.rs
os/src/process/: mod.rs  structs.rs
os/src/trap/: trap.asm
rbl/: Cargo.toml  Makefile  rbl.txt  riscv32.json
rcore32/: .riscv32-blog_os.json.swp  Cargo.toml  Makefile  build.rs  build.sh  download  help.txt  ker.txt  less  riscv32-blog_os.json
rcore32/src/: .interrupr.rs.swp  .io.rs.swp  .main.rs.swp  .sbi.rs.swp  clock.rs  consts.rs  context.rs  init.rs  interrupt.rs  io.rs  lang_items.rs  lib.rs  main.rs  sbi.rs
rcore32/src/drivers/: device_tree.rs
rcore32/src/fs/: device.rs  file_handle.rs  mod.rs  stdio.rs  structs.rs
rcore32/src/memory/: addr.rs  mod.rs  paging.rs
rcore32/src/memory/frame_alloc/: bit_allocator.rs  buddy_alloc.rs  mod.rs
rcore32/src/memory/paging/: mod.rs
rcore32/src/memory_set/: area.rs  attr.rs  handler.rs  mod.rs
rcore32/src/process/: interrupt.rs  mod.rs  processor.rs  structs.rs  thread_pool.rs  timer.rs
rcore32/src/process/scheduler/: mod.rs
rcore32/src/sync/: condvar.rs  mod.rs
rcore32/src/syscall/: mod.rs
rcore32/src/trap/: trap.asm
rcore32/test/t/: sh
rcore32/test/t/shell/: Cargo.toml
rcore32/usr/: Makefile  hello_rust  rcore32.img  try
rcore32/usr/rcore/rust/: hello_world
rcore32/usr/rust/: Cargo.toml  riscv32-blog_os.json
rcore32/usr/rust/src/: io.rs  lang_items.rs  lib.rs  syscall.rs
rcore32/usr/test/: rcore32.img
rcore32/usr/test/rcore/rust/: hello  hello_rust
report/: 1. Make A Freestanding Rust Binary.md  1. 独立式可执行程序.md  10. 用户线程.md  10. 线程调度.md  11. 文件系统.md  11. 用户线程.md  2. Make A Freestanding Rust Binary.md  2. Make A Minimal Rust Kernel.md  2. 最小化内核.md  3. Output.md  3. 格式化输出.md  4-1. 中断跳转.md  4. Trap.md  5. 时钟中断.md  6-1. 实现页表.md  6-1. 页表（续）.md  6. 页表.md  6. 页表简介.md  7. 内存分配.md  8. 内核线程.md  8. 创建页表.md  8. 实现页表.md  8. 页表（续）.md  9. 内核线程.md  9. 用户线程.md  9. 线程调度.md  ?. 用户线程.md  ??. 页表（续）.md  midterm report.md
wiki/: 1-1. how to switch rust toolchain.md  2-1. Error when executing "cargo xbuild target x86_64 blog_os.json" in "Make A Minimal Rust Kernel".md  2-2. "No such file or directory" when executing "qemu-system-x86_64 -drive format=raw,file=bootimage-xy_os.bin".md  2-3 panic at 'kernel mapping failed: pageAlredyMapped'.md  (+3 more)
xy_os/: Cargo.toml  Makefile  context.rs  riscv_32-xy_os.json
xy_os/bbl/: payload.S
xy_os/crate/bbl/: Cargo.toml
xy_os/crate/bbl/src/: lib.rs  sbi.rs
xy_os/crate/libr/: Cargo.toml
xy_os/crate/libr/src/: io.rs  lib.rs
xy_os/libr/: Cargo.toml
xy_os/riscv-pk/: configure
xy_os/riscv-pk/bbl/: bbl.c
xy_os/riscv-pk/machine/: minit.c  vm.h
xy_os/riscv-pk/pk/: pk.c
xy_os/src/: clock.rs  consts.rs  context.rs  init.rs  interrupt.rs  lang_items.rs  lib.rs  main.rs  memory.rs
xy_os/src/arch/: mod.rs
xy_os/src/drivers/: device_tree.rs
xy_os/src/memory/: mod.rs  paging.rs
xy_os/src/memory/frame_allocator/: bit_allocator.rs  buddy_allocator.rs  mod.rs
xy_os/src/memory_set/: area.rs  attr.rs  handler.rs  mod.rs
xy_os/src/process/: mod.rs  processor.rs  scheduler.rs  structs.rs  switch.asm  thread_pool.rs
xy_os/src/trap/: .trap.asm.swp  trap.asm
(+11 files in other folders)
