[package]
name = "os"
version = "0.1.0"
authors = ["fengyuan <511568816@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.1"
buddy-allocator = { path = "crate/buddy-allocator" }
lazy_static = { version = "1.3", features = ["spin_no_std"] }
riscv = { path = "crate/riscv", features = ["inline-asm"] }
spin = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"