[package]
name = "xy_os"
version = "0.1.0"
authors = ["刘丰源 <2017011313@secoder.net>"]
edition = "2018"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bbl = { path = "crate/bbl" }

[package.metadata.bootimage]
default-target = "riscv_32-xy_os.json"
