[package]
name = "xy_os"
version = "0.1.0"
authors = ["刘丰源 <2017011313@secoder.net>"]
edition = "2018"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bbl = { path = "crate/bbl"}
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
bit_field = "0.9"
lazy_static = { version = "1.3", features = ["spin_no_std"] }
spin = "0.3"
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator" }
device_tree = { git = "https://github.com/xy-plus/device_tree-rs" }