[package]
name = "xy_os"
version = "0.1.0"
authors = ["刘丰源 <2017011313@secoder.net>"]
edition = "2018"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bbl = { path = "crate/bbl"}
buddy_system_allocator = "0.1"
riscv = { git = "https://github.com/xy-plus/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.3", features = ["spin_no_std"] }
spin = "0.3"
device_tree = { git = "https://github.com/xy-plus/device_tree-rs" }
buddy-allocator = { git = "https://github.com/xy-plus/buddy-allocator" }
RoundRobinScheduler = { git = "https://github.com/xy-plus/RoundRobinScheduler" }
xmas-elf = "0.6"
# memory_set = { git = "https://github.com/xy-plus/memory_set" }